--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 
     <div id="aboutMe">
         <h2>About Me</h2>
+        <div id="line">
+            </div>
+
         <img src="#" alt="Default picture">
-        <p>I'm one of the few born and raised Austinites. My fiancé Angela and my dog 
+            <p>I'm one of the few born and raised Austinites. My fiancé Angela and my dog 
             Daisy are the two ladies of my life. We enjoy huddling up on the couch to watch our favorite shows or get some evening reading in.
             If we're not at the house Angela and I are either at the gym, swimming, or playing with her nephew.
-
-            I am passionate about creative problem solving and automation. I am currently split my time between operations and data analysis for Indeed.
+                </p>
+            <p>I am passionate about creative problem solving and automation. I am currently split my time between operations and data analysis for Indeed.
             Since joining the company I've identified many areas for improvement of our content management system, and helped answer influential questions for management.
             I'm eager to advance my career and find more impactful, challenging work.
-
-        </p>
+                </p>
     </div>
 
 
