default pic cropped and style adjusted

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="line">
             </div>
 
-        <img src="#" alt="Default picture">
+        <img  id="DefaultPic" src="/Users/jmoss/Basic-Portfolio/assets/images/About_Me_Pic.JPG" alt="Default picture">
             <p>I'm one of the few born and raised Austinites. My fiancé Angela and my dog 
             Daisy are the two ladies of my life. We enjoy huddling up on the couch to watch our favorite shows or get some evening reading in.
             If we're not at the house Angela and I are either at the gym, swimming, or playing with her nephew.
