updating styles to reflect assignment specs

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 
 <body>
-    <nav>
+    <header>
         <h1>Jacob Moss</h1>
-    </nav>
+    </header>
 
     <div id="aboutMe">
         <h2>About Me</h2>
@@ -19,7 +19,7 @@
             Daisy are the two ladies of my life. We enjoy huddling up on the couch to watch our favorite shows or get some evening reading in.
             If we're not at the house Angela and I are either at the gym, swimming, or playing with her nephew.
                 </p>
-            <p>I am passionate about creative problem solving and automation. I am currently split my time between operations and data analysis for Indeed.
+            <p>I am passionate about creative problem solving and automation. I currently split my time between operations and data analysis for Indeed.
             Since joining the company I've identified many areas for improvement of our content management system, and helped answer influential questions for management.
             I'm eager to advance my career and find more impactful, challenging work.
                 </p>
@@ -27,3 +27,7 @@
 
 
 </body>
+
+<footer>
+    <h1>Footer</h1>
+</footer>
