final commit for the day. only bonus work left

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 <body>
     <header>
         <h1>Jacob Moss</h1>
+        <div>
+            <p>About</p>
+        </div>
+
+        <div>
+            <p>Portfolio</p>
+        </div>
+
+        <div>
+            <p>Contact</p>
+        </div>    
     </header>
 
     <div id="aboutMe">
