TA fixed nav float

--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
 <!DOCTYPE html>
+<head>
+    <title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="/Users/jmoss/Basic-Portfolio/assets/css/style.css">
+</head>
+
+<header>
+        <a href="index.html" class="myName">Jacob Moss</h1> <!--change to a tag-->
+
+        <div class="clearfix"></div>
+
+        <nav>
+            <ul>
+                <li><a href="index.html" class="navlink">About</a></li>
+                <!-- <div class="clearfix"></div> -->
+                <li><a href="portfolio.html" class="navlink">Portfolio</a></li>
+                <!-- <div class="clearfix"></div> -->
+                <li><a href="contact.html" class="navlink">Contact</a></li>
+            </ul> 
+        </nav>
+
+<body>
+    
+
+
+    </header>
+
+    <div id="aboutMe">
+        <h2>About Me</h2>
+        <div id="line">
+            </div>
+
+        <img  id="DefaultPic" src="/Users/jmoss/Basic-Portfolio/assets/images/About_Me_Pic.JPG" alt="Default picture">
+            <p>I'm one of the few born and raised Austinites. My fiancé Angela and my dog 
+            Daisy are the two ladies of my life. We enjoy huddling up on the couch to watch our favorite shows or get some evening reading in.
+            If we're not at the house Angela and I are either at the gym, swimming, or playing with her nephew.
+                </p>
+            <p>I am passionate about creative problem solving and automation. I currently split my time between operations and data analysis for Indeed.
+            Since joining the company I've identified many areas for improvement of our content management system, and helped answer influential questions for management.
+            I'm eager to advance my career and find more impactful, challenging work.
+                </p>
+    </div>
+
+
+</body>
+
+<footer>
+    <h1>Footer</h1>
+</footer>
