adding reset.css file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="assets/reset.css">
     <link rel="stylesheet" type="text/css" href="/Users/jmoss/Basic-Portfolio/assets/css/style.css">
 </head>
 
@@ -12,9 +13,7 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="navlink">About</a></li>
-                <!-- <div class="clearfix"></div> -->
                 <li><a href="portfolio.html" class="navlink">Portfolio</a></li>
-                <!-- <div class="clearfix"></div> -->
                 <li><a href="contact.html" class="navlink">Contact</a></li>
             </ul> 
         </nav>
