nav rearranged and css cleaned

--- a/index.html
+++ b/index.html
@@ -6,23 +6,22 @@
 </head>
 
 <header>
-        <a href="index.html" class="myName">Jacob Moss</h1> <!--change to a tag-->
+        <a href="index.html" class="myName">Jacob Moss</h1></a>
 
-        <div class="clearfix"></div>
 
         <nav>
             <ul>
-                <li><a href="index.html" class="navlink">About</a></li>
-                <li><a href="portfolio.html" class="navlink">Portfolio</a></li>
-                <li><a href="contact.html" class="navlink">Contact</a></li>
+                <li><a href="index.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul> 
         </nav>
-
+    </header>
 <body>
     
 
 
-    </header>
+   
 
     <div id="aboutMe">
         <h2>About Me</h2>
