--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <head>
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="assets/reset.css">
-    <link rel="stylesheet" type="text/css" href="/Users/jmoss/Basic-Portfolio/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
 </head>
 
 <header>
