contact page done

--- a/contact.html
+++ b/contact.html
@@ -28,15 +28,26 @@
         <h2>Contact</h2>
         <div id="line">
             </div>
+
             <form>
+
+                <div class="formdiv">
                 Name:
                 <input type="text" name="name">
-                
+                </div>
+
+                <div class="formdiv">
                 Email:
                 <input type="text" name="email">
+                </div>
 
+                <div class="formdiv">
                 Message:
-                <input type="text" name="message">
+                <input id="message" type="text" name="message">
+                </div>
+
+                <input id="submit" type="submit" value="Submit">
+
               </form>
 
 
