--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="assets/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/portfolio.css">
 </head>
 
 <header>
@@ -24,10 +25,17 @@
    
 
     <div id="aboutMe">
-        
+            <h2>Portfolio</h2>
         <div id="line">
             </div>
 
+            <div class="grid-container">
+            <img src="assets/images/placeholder.png" alt="Hangman">
+            <img src="assets/images/placeholder.png" alt="RPG Game">
+            <img src="assets/images/placeholder.png" alt="Trivia Game">
+            <img src="assets/images/placeholder.png" alt="Rutgers Info Widget">
+            <img src="assets/images/placeholder.png" alt="Rock Paper Scissors"> 
+            </div>
         
     </div>
 
