portfolio page complete

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,11 +30,31 @@
             </div>
 
             <div class="grid-container">
-            <img src="assets/images/placeholder.png" alt="Hangman">
-            <img src="assets/images/placeholder.png" alt="RPG Game">
-            <img src="assets/images/placeholder.png" alt="Trivia Game">
-            <img src="assets/images/placeholder.png" alt="Rutgers Info Widget">
-            <img src="assets/images/placeholder.png" alt="Rock Paper Scissors"> 
+
+                <div class="containerimg">
+                    <img src="assets/images/placeholder.png" alt="Hangman">
+                    <h2 class="containerh2">Image1</h2>
+                </div>
+
+                <div class="containerimg">
+                    <img src="assets/images/placeholder.png" alt="RPG Game">
+                    <h2 class="containerh2">Image2</h2>
+                </div>
+
+                <div class="containerimg">
+                    <img src="assets/images/placeholder.png" alt="Trivia Game">
+                    <h2 class="containerh2">Image3</h2>
+                </div>
+
+                <div class="containerimg">
+                    <img src="assets/images/placeholder.png" alt="Rutgers Info Widget">
+                    <h2 class="containerh2">Image4</h2>
+                </div>
+
+                <div class="containerimg">
+                    <img src="assets/images/placeholder.png" alt="Rock Paper Scissors">
+                    <h2 class="containerh2">Image5</h2> 
+                </div>
             </div>
         
     </div>
