--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
             </ul> 
         </nav>
     </header>
+
+
 <body>
-    
 
-
-   
 
     <div id="aboutMe">
         <h2>About Me</h2>
@@ -43,5 +42,5 @@
 </body>
 
 <footer>
-    <h1>Footer</h1>
+    <h1>Copyright ©</h1>
 </footer>
